--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,9 @@ requires-python = ">=3.9"
 [tool.setuptools]
 packages = ["src"]
 [tool.bumpver]
-current_version = "2024.1001-alpha"
-version_pattern = "YYYY.BUILD[-TAG]"
+current_version = "1.0.0"
+version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump version {old_version} -> {new_version}"
-tag_message = "{new_version}"
 tag_scope = "default"
 pre_commit_hook = ""
 post_commit_hook = ""
