--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,14 @@ keywords = ["db-bkup", "python backup utility", "backup-utility"]
 dependencies = [
     "bumpver",
     "pip-tools",
-    "fire"
-    "mysql-connector-python"
+    "fire",
+    "mysql-connector-python",
+    "cryptography",
+    "google-cloud-storage",
+    "bson",
+    "pymongo",
+    "pymysql"
+
 ]
 requires-python = ">=3.9"
 
@@ -43,5 +49,3 @@ push = true
 ]
 
 "src/db-bkup/__init__.py" = ["{version}"]
-
-
